# linear_collections

./: Cargo.toml  README.md  g  justfile  license.txt
.helix/: languages.toml
macros/: Cargo.toml  readme.md
macros/fallible/: Cargo.toml
macros/fallible/src/: lib.rs
macros/panicking/: Cargo.toml
macros/panicking/src/: lib.rs
macros/src/: fallible.rs  helpers.rs  lib.rs  panicking.rs
src/: lib.rs  serde.rs  test.rs
src/array/: map.rs  mod.rs  test.rs
src/array_vec/: error.rs  mod.rs  test.rs
src/fallible/: error.rs  mod.rs
src/fallible/fat_vec/: map.rs  mod.rs  set.rs  test.rs  types.rs
src/fallible/fat_vec/trybuild/: empty_items.rs  empty_items.stderr  items_gt_stack_capacity.rs  items_gt_stack_capacity.stderr
src/fallible/stack_list/: map.rs  mod.rs  set.rs
src/fallible/vec/: map.rs  mod.rs  set.rs
src/fallible/vecdeque/: map.rs  set.rs
src/fat_vec/: map.rs  mod.rs  set.rs  test.rs
src/fat_vec/serde/: mod.rs
src/fat_vec/trybuild/: empty_items.rs  empty_items.stderr  items_gt_stack_capacity.rs  items_gt_stack_capacity.stderr
src/panicking/: mod.rs
src/panicking/fat_vec/: map.rs  mod.rs  set.rs  test.rs
src/panicking/vec/: map.rs  set.rs
src/panicking/vecdeque/: map.rs  set.rs
src/serde/: fallible.rs  mod.rs  panicking.rs  test.rs
src/stack_list/: error.rs  map.rs  mod.rs  set.rs  test.rs
src/stack_list/raw/: mod.rs  test.rs  verification.rs
src/stack_list/serde/: mod.rs
src/test/: mod.rs
src/test/should_panic/: array_map_duplicate_string_literal_with_prefix.rs  array_map_empty.rs  array_map_empty.stderr  array_map_many_duplicates.rs  array_map_many_duplicates.stderr  array_map_one_duplicate.rs  array_map_one_duplicate.stderr  vec_map_empty.rs  vec_map_empty.stderr  vec_map_many_duplicates.rs  vec_map_many_duplicates.stderr  vec_map_one_duplicate.rs  vec_map_one_duplicate.stderr
src/test/should_panic/panicking/: vec_map_duplicate_numeric_with_seperator.rs  vec_map_duplicate_numeric_with_type.rs  vec_map_empty.rs  vec_map_many_duplicates.rs  vec_map_one_duplicate.rs
src/vec/: map.rs  mod.rs  set.rs
src/vecdeque/: map.rs  set.rs
