[workspace]
members = ["macros"]

[package]
name = "linear_collections"
version = "0.3.0"
edition = "2021"
description = "Map and Set types backed by linear data structures."
license = "MIT"
repository = "https://github.com/Jeremiah-Griffin/linear_collections"
categories = ["data-structures"]
keywords = ["vecmap", "arraymap", "linearmap", "vecset", "arrayset"]

[dependencies]
serde = { version = "1.*.*", optional = true, default-features = false, features = ["std"]}
macros = {path = "macros", optional = true}
#serde_big_array = {version = 0.5.1, optional = true},

[dev-dependencies]
trybuild = {version = "1.0.96"}

[features]
default = []
#Adds support for ser/deserialization of *non-array types* with serde.
#To serialize array backed types, enable the "serde-big-array" feature as well.
serde = ["dep:serde"]
#Enables ser/deserialization of array backed types with serde
#serde_big_array = ["dep:serde", "dep:serde_big_array"]

#Linear-collections can use macros to validate literals structures at compile time. 
#These add a number of dependencies and are thus feature gated.
macros = ["dep:macros"]
