[workspace]
members = ["macros"]

[package]
name = "linear_collections"
#rember to update changelog whenever 
version = "0.4.0"
edition = "2021"
description = "Map and Set types backed by linear data structures."
license = "MIT"
repository = "https://github.com/Jeremiah-Griffin/linear_collections"
categories = ["data-structures"]
keywords = ["vecmap", "arraymap", "linearmap", "vecset", "arrayset"]

[dependencies]
serde = { version = "1.*.*", optional = true, default-features = false, features = ["std"]}
serde_test = {version = "1.0.176", optional = true}
linear_collections_macros = {path = "macros", version = "0.4.0", optional = true}
fallible_linear_collections_macros = {path = "macros/fallible", version = "0.4.0", optional = true}
panicking_linear_collections_macros = {path = "macros/panicking", version = "0.4.0", optional = true}
static_assertions = "1.1.0"
#serde_big_array = {version = 0.5.1, optional = true},

[dev-dependencies]
trybuild = {version = "1.0.96"}

[features]
#panicking and nightly_fallible are seperate in case a create wants 
#only fallible collections. Choosing no default features and nightly_fallible will achieve this.

#Types which handle allocation failure by panicking.
panicking = []
#Types which handle allocation failure by returning an error. 
nightly_fallible = []
default = []
#Adds support for ser/deserialization of *non-array types* with serde.
#To serialize array backed types, enable the "serde-big-array" feature as well.
serde = ["dep:serde", "dep:serde_test"]
#Enables ser/deserialization of array backed types with serde
#serde_big_array = ["dep:serde", "dep:serde_big_array"]

#macros for panicking types
panicking_macros = ["dep:fallible_linear_collections_macros", "dep:linear_collections_macros"]

#macros for fallible types
fallible_macros = ["dep:panicking_linear_collections_macros", "dep:linear_collections_macros"]
