[package]
name = "linear_collections_macros"
version = "0.4.0"
edition = "2021"
description = "proc-macros for linear_collections"
license = "MIT"
repository = "https://github.com/Jeremiah-Griffin/linear_collections"

[dependencies]
quote = { version = "1.0"}
syn = { version = "2.0", features = ["full"]}

[lib]
proc-macro = true
